--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,33 @@
+# Permalinks
 #
-# This file contains configuration flags to customize your site
-#
+# Use of `relative_permalinks` ensures post links from the index work properly.
+permalink: pretty
+# relative_permalinks: true
 
-# Name of your site (displayed in the header)
-name: Emerald Hieu
+# Setup
+title: Emerald Hieu
+tagline: Work Journal
+description: Do not go gentle into that good night
+url: http://emeraldhieu.github.io
+baseurl: ''
+paginate: 5
 
-# Short bio or description (displayed in the header)
-description: A Hungry Developer
+# About/contact
+author:
+  name: Emerald Hieu
+  url: https://facebook.com/emerald.hieu
+
+# Custom variables
+version: 1.0.0
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/emeraldhieu.png
+avatar: https://github.com/emeraldhieu.png?size=200
 
-#
-# Flags below are optional
-#
+# Github
+github:
+  repo: https://github.com/emeraldhieu/emeraldhieu.github.io
 
-# Includes an icon in the footer for each username you enter
+# Social network icons
 footer-links:
   dribbble:
   email: emerald.hieu@gmail.com
@@ -37,26 +49,13 @@ footer-links:
 disqus:
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
-
-# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
-# Used for Sitemap.xml and your RSS feed
-url:
+google_analytics: UA-90688567-1
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
-
-#
-# !! You don't need to change any of the configuration flags below !!
-#
-
-permalink: /:title/
-
-# The release of Jekyll Now that you're using
-version: v1.2.0
+# baseurl: ""
 
 # Jekyll 3 now only supports Kramdown for Markdown
 kramdown:
@@ -75,7 +74,7 @@ sass:
 # Use the following plug-ins
 gems:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
-  - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
+  - jekyll-paginate # Pagination
 
 # Exclude these files from your production _site
 exclude:
