Change title and tagline
* Control showing title and tagline appropriately

--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ permalink: pretty
 # relative_permalinks: true
 
 # Setup
-title: Emerald Hieu
-tagline: Work Journal
+title: Code Legend
+tagline: Developers are Kings
 description: Do not go gentle into that good night
 url: http://emeraldhieu.github.io
 baseurl: ''
