Adjust social icons
* Connect to local server using mobile
* Remove redudant div in sidebar
* Change font size of desktop

--- a/_config.yml
+++ b/_config.yml
@@ -83,3 +83,7 @@ exclude:
   - LICENSE
   - README.md
   - CNAME
+
+# Connect to local server using mobile
+# Refer to https://goo.gl/jddZgQ
+host: 0.0.0.0
